# Inverse-Problems-Toolbox

./: .gitignore  CMakeLists.txt  README.md
RestoreManifold/: .gitignore  CMakeLists.txt  README.md  setup.py
RestoreManifold/cxxRestoreManifold/: CMakeLists.txt
RestoreManifold/cxxRestoreManifold/sparse2d/cxx/: MRM2d.cpp  ManiMR.h  sparse2d.cpp  starlet2d.cpp  starlet2d.h
RestoreManifold/pyRestoreManifold/: __init__.py
RestoreManifold/pyRestoreManifold/restore/: __init__.py
RestoreManifold/pyRestoreManifold/trans/: ManiStarletSn.py  __init__.py
RestoreManifold/pyRestoreManifold/utils/: __init__.py
RestoreManifold/pyRestoreManifold/wrappers/: __init__.py
RestoreManifold/pyStarlet/: __init__.py  pyStarlet.py
RestoreManifold/scripts/: Starlet_Transform_Sn.ipynb
SparseCoupledDictionaryLearning/: CMakeLists.txt  README.md  setup.py
SparseCoupledDictionaryLearning/SparseCoupledDL/: SparseCoupledDictionaryTraining.py  __init__.py
pyRestoreManifold/: README.md
pyRestoreManifold/wrappers/sources/sparse2d/cxx/: MRM2d.cpp  ManiMR.h  starlet2d.h
scripts/: .gitignore  Denoising_Sn.ipynb  Starlet_Transform_Sn.ipynb  run_CoupledDicoLearning.ipynb
